<resources>
    <string name="app_name">Gourmet</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="title">Ca chua da lat</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna gilla urna, porttitor rhoncus dolor purus non enim aesent entum facilisis leo, vel</string>
    <string name="RecipeQuestion">Bạn muốn ăn gì hôm nay?</string>
    <string name="san_pham_title">SẢN PHẨM</string>
    <string name="sample_name_edit">Nguyen Van A</string>
    <string name="thong_tin_giao_hang">THÔNG TIN GIAO HÀNG</string>
    <string name="ho_va_ten">Họ tên</string>
    <string name="them_san_pham">Thêm sản phẩm</string>
    <string name="xoa_gio_hang">Xóa giỏ hàng</string>
    <string name="dia_chi_giao_hang">Địa chỉ giao hàng</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="_0869315924">0869315924</string>
    <string name="address_sample">123/456A Nguyễn Thị Minh Khai, phường 2, quận 13</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="dat_hang">Đặt hàng</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
</resources>